--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h2>Featured Snacks</h2>
         <div class="dishes-grid">
           <div class="dish">
-            <img src="images/111.jpg" alt="Featured Dish">
+            <img src="https://github.com/Sandypie7878/crispo.github.io/blob/main/111.jpg" alt="Featured Dish">
             <h3>Standard</h3>
             <p>A savory mix of fresh ingredients topped with our secret recipie.</p>
           </div>
