--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
         <h2>Featured Snacks</h2>
         <div class="dishes-grid">
           <div class="dish">
-            <img src="https://github.com/Sandypie7878/crispo.github.io/blob/main/111.jpg" alt="Featured Dish">
+            <img src="111.jpg" alt="Featured Dish">
             <h3>Standard</h3>
             <p>A savory mix of fresh ingredients topped with our secret recipie.</p>
           </div>
           <div class="dish">
-            <img src="images/2.jpg" alt="Featured Dish">
+            <img src="2.jpg" alt="Featured Dish">
             <h3>Sweet and Spicy</h3>
             <p>Delicious chips that can give you both sides of the taste palette.</p>
           </div>
           <div class="dish">
-            <img src="images/3.png" alt="Featured Dish">
+            <img src="3.png" alt="Featured Dish">
             <h3>Salty and Crunchy</h3>
             <p>Salty delight with crunchy texture everyone loves.</p>
           </div>
