--- a/menu.html
+++ b/menu.html
@@ -31,7 +31,7 @@
         <div class="dishes-grid">
           <!-- Dish 1 -->
           <div class="dish">
-            <img src="images/111.jpg" alt="Featured Dish">
+            <img src="https://github.com/Sandypie7878/crispo.github.io/blob/main/111.jpg?raw=true" alt="Featured Dish">
             <h3>Standard</h3>
             <p>A savory mix of fresh ingredients topped with our secret recipie.</p>
             <button class="order-btn">Order Now</button>
@@ -39,7 +39,7 @@
           
           <!-- Dish 2 -->
           <div class="dish">
-            <img src="images/2.jpg" alt="Featured Dish">
+            <img src="https://github.com/Sandypie7878/crispo.github.io/blob/main/2.jpg?raw=true" alt="Featured Dish">
             <h3>Sweet and Spicy</h3>
             <p>Delicious chips that can give you both sides of the taste palette.</p>
             <button class="order-btn">Order Now</button>
@@ -47,7 +47,7 @@
 
           <!-- Dish 3 -->
           <div class="dish">
-            <img src="images/3.png" alt="Featured Dish">
+            <img src="https://github.com/Sandypie7878/crispo.github.io/blob/main/3.png?raw=true" alt="Featured Dish">
             <h3>Salty and Crunchy</h3>
             <p>Salty delight with crunchy texture everyone loves.</p>
             <button class="order-btn">Order Now</button>
